<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/robbinsdale" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/robbinsdale_residences"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="ROBBINSDALE RESIDENCES" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Location: Araneta Ave., Quezon City" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Distance From UST: 1.6km" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/back1"
        tools:text="Back" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/next1"
        tools:text="Next" />

</LinearLayout>