<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_centerHorizontal="true"
        android:text="@string/buttn"
        tools:text="Back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:text="@string/skylofthotel"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="SKYLOFT HOTEL" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="124dp"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Location: Lacson Ave., Samplaoc, Manila" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="-124dp"
        android:text="@string/distance3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Distance From UST: 0.8km" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button"
        tools:text="NEXT" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        app:srcCompat="@drawable/skyloft"
        android:contentDescription="@string/todo" />
</RelativeLayout>